<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bbz</groupId>
    <artifactId>spring-boot-stuty</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <modules>
        <module>spring-boot-common</module>
        <module>spring-boot-jpa</module>
        <module>spring-boot-rabbitmq</module>
        <module>spring-boot-mybits</module>
        <module>java-algorithm-problems</module>
        <module>netty-study</module>
        <module>spring-boot-web</module>
        <module>spring-study</module>
        <module>java-thread</module>
        <module>spring-aop-study</module>
        <module>spring-boot-elasticsearch</module>
        <module>java-reflect</module>
        <module>java-design-patterns</module>
        <module>netty-rpc</module>
        <module>spring-rpc</module>
        <module>spring-ioc-study</module>
        <module>spring-boot-redis</module>
        <module>spring-boot-hazelcast</module>
        <module>java8-new-features</module>
        <module>spirng-springmvc</module>
        <module>java-spi</module>
        <module>sping-boot-shiro</module>
        <module>java-effective</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>1.8</java.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <repositories>
        <repository>
            <id>aliyun</id>
            <name>aliyun</name>
            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/libs-milestone</url>
        </repository>
    </repositories>
</project>